--- a/day 39/cw39.css
+++ b/day 39/cw39.css
@@ -34,8 +34,24 @@
     flex-direction: column;
 }
 
+.button1{
+    transform: translate(-700px, 200px);
+}
+.button2{
+    transform: translate(-700px, 200px);
+}
+.button3{
+    transform: translate(-700px, 200px);
+}
+
 .img1{
-    transform: translate(1000, -100);
+    transform: translate(1000px, -100px);
+}
+.img2{
+    transform: translate(1000px, -100px);
+}
+.img3{
+    transform: translate(1000px, -100px);
 }
 
 .card-Text{
@@ -47,3 +63,102 @@
 .card-Text3{
     color:white;
 }
+
+@media(max-width: 768px){
+    .card{
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    height: 70vh;
+    border-radius: 12px;
+    background-color: orange;
+    width: 50vh;
+    justify-content: center;
+    flex-direction: column;
+}
+}
+
+@media(max-width: 768px){
+    .card2{
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    border-radius: 12px;
+    height: 70vh;
+    background-color: rgb(72, 72, 142);
+    width: 50vh;
+    justify-content: center;
+    flex-direction: column;
+}
+}
+
+@media(max-width: 768px){
+    .card3{
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    border-radius: 12px;
+    background-color: rgb(6, 41, 6);
+    height: 70vh;
+    width: 50vh;
+    justify-content: center;
+    flex-direction: column;
+}
+}
+
+@media(max-width: 768px){
+    .button1{
+    transform: translate(-700, 200);
+}
+}
+
+@media(max-width: 768px){
+    .button2{
+    transform: translate(-700, 200);
+}
+}
+
+@media(max-width: 768px){
+    .button2{
+    transform: translate(-700, 200);
+}
+}
+
+@media(max-width: 768px){
+    .button3{
+    transform: translate(-700, 200);
+}
+}
+@media(max-width: 768px){
+    .img1{
+    transform: translate(1000, -100);
+}
+}
+@media(max-width: 768px){
+    .img2{
+    transform: translate(1000, -100);
+}
+}
+@media(max-width: 768px){
+    .img3{
+    transform: translate(1000, -100);
+}
+}
+
+@media(max-width: 768px){
+    .card-Text{
+    color: white;
+} 
+}
+
+@media(max-width: 768px){
+    .card-Text2{
+    color: white;
+}
+}
+@media(max-width: 768px){
+    .card-Text3{
+    color:white;
+}
+}
+
